force-app/main/default/objects/API_Request__c/API_Request__c.object-meta.xml
<CustomObject>
    <label>API Request Log</label>
    <nameField>
        <label>API Request Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>