force-app/main/default/objects/API_Request__c/fields/After_Update__c.field-meta.xml
<CustomField>
    <fullName>After_Update__c</fullName>
    <label>After Update</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>