force-app/main/default/objects/API_Request__c/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <label>Before Update</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>