force-app/main/default/objects/API_Request__c/listViews/Join_Now_Forms.listView-meta.xml
<ListView>
    <fullName>Join_Now_Forms</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>Request_Body__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>Join Now</value>
    </filters>
    <label>Join Now Forms</label>
</ListView>