force-app/main/default/objects/API_Request__c/listViews/Membership_Roles_Form.listView-meta.xml
<ListView>
    <fullName>Membership_Roles_Form</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>Request_Body__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Membership Roles Form</value>
    </filters>
    <label>Membership Roles Form</label>
</ListView>