force-app/main/default/objects/API_Request__c/listViews/Travel_Fund_Request.listView-meta.xml
<ListView>
    <fullName>Travel_Fund_Request</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Travel Fund Request Form</value>
    </filters>
    <label>Travel Fund Request</label>
</ListView>