force-app/main/default/objects/API_Request__c/listViews/Visa_Request.listView-meta.xml
<ListView>
    <fullName>Visa_Request</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Body__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>startsWith</operation>
        <value>Visa Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Visa Request</label>
</ListView>